[package]
name = "jwt-crackng"
version = "0.2.0"
edition = "2021"
authors = ["0xnoid / Mimmikk <tools@mimmikk.com>"]
description = "Bruteforce HMACSHA encrypted JSON Web Tokens"
license = "GPLv3"

[dependencies]
glob = "0.3"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
itertools = "0.12"
indicatif = "0.17"
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"
num_cpus = "1.16"
users = "0.11"
ring = "0.16.20"

[[bin]]
name = "jwt-crackng"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
